[tool.poetry]
name = "requests-project"
version = "0.1.0"
description = ""
authors = ["Ramon"]
readme = "README.md"
packages = [{include = "requests_project"}]

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^2.2.2"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
